--- a/0x0A-i18n/templates/4-index.html
+++ b/0x0A-i18n/templates/4-index.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
+<title>{{gettext("home_title")}}</title>
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{home_title}}</title>
-</head>
-
-<body>
-	<h1>{{home_header}}</h1>
-</body>
-
-</html>
+<h1>{{gettext("home_header")}}</h1>
