--- a/0x0A-i18n/templates/index.html
+++ b/0x0A-i18n/templates/index.html
@@ -1,11 +1,11 @@
-<title>{{home_title}}</title>
+<title>{{gettext("home_title")}}</title>
 
-<h1>{{home_header}}</h1>
+<h1>{{gettext("home_header")}}</h1>
 
 
-{% if logged_in %}
-<p>{{logged_in_as}}</p>
+{% if g.user %}
+<p>{{gettext("logged_in_as", username=g.user.get("name"))}}</p>
 {% else %}
-<p>{{not_logged_in}}</p>
+<p>{{gettext("not_logged_in")}}</p>
 {% endif %}
-<p>{{current_time_is}}</p>
+<p>{{gettext("current_time_is")}}</p>
