Updated final files with cleaner route function and other changes

--- a/0x0A-i18n/templates/index.html
+++ b/0x0A-i18n/templates/index.html
@@ -8,4 +8,4 @@
 {% else %}
 <p>{{gettext("not_logged_in")}}</p>
 {% endif %}
-<p>{{gettext("current_time_is")}}</p>
+<p>{{gettext("current_time_is", current_time=current_time)}}</p>
